--- a/www/css/style.css
+++ b/www/css/style.css
@@ -105,6 +105,7 @@ textarea.form-control {
 .btn-primary {
     background-color: #007bff;
     color: white;
+    width: 400px;
 }
 
 .btn-primary, .btn-secondary, .btn-danger {
