--- a/www/css/style.css
+++ b/www/css/style.css
@@ -45,7 +45,7 @@ h1 {
 
 /* 投稿フォーム */
 .post-form {
-    background: white;
+    background:#ffdadd;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -105,7 +105,7 @@ textarea.form-control {
 .btn-primary {
     background-color: #007bff;
     color: white;
-    width: 400px;
+
 }
 
 .btn-primary, .btn-secondary, .btn-danger {
@@ -174,7 +174,7 @@ textarea.form-control {
 
 /* 投稿カード */
 .post {
-    background: white;
+    background: #ffdadd;
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
